DevTools: Fix UI glitch with vertical scroll bar in settings dialog.
Let's disable horizontal scroll bar, while allowing the vertical one.
This will fix the UI glitch, while still allow to scroll dialog's
content when DevTools is docked to bottom into a frame with small height.

BUG=412689
R=vsevik

Review URL: https://codereview.chromium.org/560293002

git-svn-id: svn://svn.chromium.org/blink/trunk@181976 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/helpScreen.css
+++ b/front_end/helpScreen.css
@@ -581,7 +581,8 @@ select.list-column-editor {
 .settings-dialog .contents {
     flex: 1 1 auto;
     padding: 0 17px;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .settings-dialog .block-header {
